concord_examples/tests/ui/retry_unknown_profile_suggestion.stderr
error: unknown retry profile `raed`
       did you mean `read`?
       available retry profiles: `read`
  --> tests/ui/retry_unknown_profile_suggestion.rs:15:15
   |
15 |         retry raed
   |               ^^^^
